added github URL
Added repo code

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
       </div>
     </div>
-    <p>https://sumbal28.github.io/weather-app23/</p>
-    <p>https://github.com/sumbal28/weather-app23</p>
+    <span>https://sumbal28.github.io/weather-app23/</span><br />
+    <span>https://github.com/sumbal28/weather-app23</span>
     <script src="src/index.js"></script>
   </body>
 </html>
